# quickexif

./: .gitignore  Cargo.toml  README.md
examples/: arw.rs  cr2.rs  cr3.rs  dng.rs  jpg.rs  jpg_jfif.rs  nef.rs  orf.rs  raf.rs  rw2.rs
src/: exif.rs  jpeg.rs  lib.rs  log_helper.rs  parsed_info.rs  parser.rs  report.rs  rule.rs  rule_macro.rs  util.rs  utility.rs  value.rs
tests/: arw.rs  describe_rule.rs  dng.rs  jpg.rs  orf.rs  parse.rs  parse_jpg.rs  rw2.rs
