[package]
name = "quickexif"
version = "0.1.2"
edition = "2021"
description = "A rust library to parse EXIF data from images"
keywords = ["exif", "tiff", "jpeg"]
documentation = "https://docs.rs/quickexif"
repository = "https://github.com/qdwang/quickexif"
license = "LGPL-2.1"
exclude = ["tests/samples/"]

[dependencies]
thiserror = "1"