[package]
name = "quickexif"
version = "0.2.0-alpha.6"
edition = "2021"
description = "A rust library to parse EXIF data from images"
keywords = ["exif", "tiff", "jpeg"]
documentation = "https://docs.rs/quickexif"
repository = "https://github.com/qdwang/quickexif"
license = "LGPL-2.1"
exclude = ["examples/samples/"]

[dependencies]
thiserror = "1"
erreport = "0.2"
phf = { version ="0.11", features = ["macros"] }
